Fix small contact icons on mobile

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -7,3 +7,8 @@ main {
 #nav-links {
     display: none;
 }
+
+#email svg, #phone svg, #location svg {
+    padding-right: 20px;
+}
+
